# trade_lab

./: .gitignore
crypto-trading-system/: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
crypto-trading-system/config/: alerts_config.yaml  consensus_config.yaml  data_sources.yaml  pairs.yaml  risk_params.yaml  scheduling.yaml
crypto-trading-system/config/agents/: sentiment_analyst.yaml  technical_analyst.yaml
crypto-trading-system/docs/: AGENT_CONTEXT.md  AGENT_RULES.md
crypto-trading-system/src/: main.py
crypto-trading-system/src/agents/: __init__.py  base_agent.py  llm_client.py  prompt_builder.py
crypto-trading-system/src/alerts/: telegram.py
crypto-trading-system/src/data/: price_fetcher.py  sentiment_fetcher.py
crypto-trading-system/src/graph/: pipeline.py  state.py
crypto-trading-system/src/graph/nodes/: agent_runner.py  consensus.py  data_collector.py  executor.py  logger.py  risk_check.py
crypto-trading-system/src/indicators/: __init__.py  atr.py  bollinger.py  ema.py  macd.py  rsi.py
crypto-trading-system/src/risk/: manager.py  position_sizer.py
crypto-trading-system/src/storage/: models.py  repository.py
crypto-trading-system/src/utils/: config_loader.py  logger.py
crypto-trading-system/tests/: test_consensus.py  test_indicators.py  test_risk_manager.py
trade_lab/: AGENT_CONTEXT.md  AGENT_RULES.md  README.md  app.py  requirements.txt  runs.sqlite3
trade_lab/configs/: default.yaml
trade_lab/core/: __init__.py  broker_sim.py  data_io.py  engine.py  indicators.py  metrics.py  risk.py  self_check.py  (+2 more)
(+6 files in other folders)
